<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Header -->
        <ImageView
            android:id="@+id/eventScreenAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="50dp"
            android:src="@drawable/community_logo_name"
            android:contentDescription="@string/community"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/topDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/topDivider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/eventScreenAppName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Settings button -->
        <ImageButton
            android:id="@+id/notificationSettings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/wrench"
            android:backgroundTint="@color/Primary"
            android:clickable="true"
            android:contentDescription="@string/notification"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@id/topDivider"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Notifications list -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notificationList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/notificationSettings"
            app:layout_constraintBottom_toTopOf="@+id/bottomeDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Bottom divider -->
        <View
            android:id="@+id/bottomeDivider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="84dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Back button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backToEntrantHome"
            android:layout_width="150sp"
            android:layout_height="48sp"
            android:layout_marginStart="136dp"
            android:layout_marginEnd="141dp"
            android:background="@drawable/button_color"
            android:text="@string/back"
            android:textColor="@color/button_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottomeDivider" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
